tests/SemanticError/Variables/Test5/BadVariableType.c
int main(){
	char a;
	int b=3;
	a=b;
	return 0;
}
